assign1/tests/parsing/bad/double-ret.c
#include "FenneC.h"

int int main() {
}